infra/environments/elon/ingressPatch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend
spec:
  tls:
  - hosts:
    - newelon.wallfair.io
    secretName: frontend-elon-cert-secret
  rules:
  - host: newelon.wallfair.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-main
              port:
                number: 80
